Fixed ios back swipe

--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,17 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script>
+    <!-- Fix for IOS back swipe -->
+    document.addEventListener(
+            'touchstart',
+            (startEvent) => {
+              if (startEvent.touches.length > 1) return;
+              startEvent.preventDefault();
+            },
+            { passive: false }
+    );
+  </script>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
