--- a/web/index.html
+++ b/web/index.html
@@ -23,8 +23,11 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="oes">
+  <meta name="apple-mobile-web-app-title" content="OES">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Fix for IOS landscape -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
