--- a/web/index.html
+++ b/web/index.html
@@ -26,16 +26,13 @@
   <meta name="apple-mobile-web-app-title" content="OES">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Fix for IOS landscape -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>OES</title>
   <link rel="manifest" href="manifest.json">
 </head>
-<body>
+<body style="background-color:rgb(10,10,10);">
   <script>
     <!-- Fix for IOS back swipe -->
     document.addEventListener(
