Fixed for IOS landscape

--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
   <title>OES</title>
   <link rel="manifest" href="manifest.json">
 </head>
-<body style="background-color:rgb(10,10,10);">
+<body style="background-color:black;">
   <script>
     <!-- Fix for IOS back swipe -->
     document.addEventListener(
